@@ -4,7 +4,7 @@ license="All rights reserved"
 
 [[mods]]
 modId="calemieconomy"
-version="1.0.15"
+version="1.0.16"
 displayName="Calemi's Economy"
 authors="Calemi"
 credits="Calemi - Programmer & Artist"
